force-app/main/default/objects/ClaimNotificationParameters__c/ClaimNotificationParameters__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Claim Notification Parameters</label>
</CustomObject>