force-app/main/default/objects/ClaimNotificationParameters__c/fields/Clearinghouse_Rejected_Records_Days__c.field-meta.xml
<CustomField>
    <fullName>Clearinghouse_Rejected_Records_Days__c</fullName>
    <label>Clearinghouse Rejected (Records Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>