force-app/main/default/objects/ClaimNotificationParameters__c/fields/Denied_Notify_Days__c.field-meta.xml
<CustomField>
    <fullName>Denied_Notify_Days__c</fullName>
    <label>Denied (Notify Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>