force-app/main/default/objects/ClaimNotificationParameters__c/fields/Denied_Records_Days__c.field-meta.xml
<CustomField>
    <fullName>Denied_Records_Days__c</fullName>
    <label>Denied (Records Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>