force-app/main/default/objects/ClaimNotificationParameters__c/fields/Payer_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Payer_Accepted__c</fullName>
    <label>Payer Accepted (Notify Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>