force-app/main/default/objects/ClaimNotificationParameters__c/fields/Payer_Rejected_Notify_Days__c.field-meta.xml
<CustomField>
    <fullName>Payer_Rejected_Notify_Days__c</fullName>
    <label>Payer Rejected (Notify Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>