force-app/main/default/objects/ClaimNotificationParameters__c/fields/Ready_to_submit__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_submit__c</fullName>
    <label>Ready to submit (Notify Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>