force-app/main/default/objects/ClaimNotificationParameters__c/fields/Send_to_ClaringHouse__c.field-meta.xml
<CustomField>
    <fullName>Send_to_ClaringHouse__c</fullName>
    <label>Send to Clearinghouse (Notify Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>