force-app/main/default/objects/ClaimNotificationParameters__c/fields/Send_to_Clearinghouse_Records_Days__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Clearinghouse_Records_Days__c</fullName>
    <label>Send to Clearinghouse (Records Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>